<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TEA - Botón Antipánico</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_registro">Registro</string>

    <!-- Login Activity -->
    <string name="title_activity_login">TEA - Login</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_logo_tea">Logo Tea</string>
    <string name="olvidePass">Olvidé mi contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_registrar">¿Todavía no tenés una cuenta? Registrate</string>
    <string name="btn_olvidePass">Olvidé mi contraseña</string>

    <!-- Main Activity -->
    <string name="btn_main_denunciar">Denunciar</string>
    <string name="main_datos_personales">Datos Personales</string>
    <string name="main_show_addresses">Mis Direcciones</string>
    <string name="main_eliminar_user">Eliminar Cuenta</string>
    <string name="main_sincronizar">Sincronizar</string>
    <string name="btn_cerrar_sesion">Cerrar Sesión</string>    

    <!-- Datos Personales -->
    <string name="title_activity_datos_personales">Datos Personales</string>
    <string name="btn_modificar_pass">Modificar Contraseña</string>
    <string name="dp_email">E-mail</string>
    <string name="dp_password">Contraseña</string>
    <string name="dp_password_conf">Confirmar Contraseña</string>
    <string name="dp_dni">DNI</string>
    <string name="dp_nombre">Nombres</string>
    <string name="dp_apellido">Apellidos</string>
    <string name="dp_telefono">Teléfono</string>
    <string name="dp_fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="dp_seleccionar_mes">Seleccionar Mes</string>

    <!-- DisplayAddressesActivity -->
    <string name="title_activity_display_addresses">Mis Direcciones</string>
    <string name="dis_addr_new_address">Agregar nueva dirección</string>

    <!-- New Address -->
    <string name="title_activity_new_address">Nueva Dirección</string>
    <string name="new_address_description">Descripción</string>
    <string name="new_address_street">Calle</string>
    <string name="new_address_street_number">Número</string>
    <string name="new_address_street_piso">Piso</string>
    <string name="new_address_street_dpto">Dpto</string>
    <string name="new_address_entreCalle1">Entre calle 1</string>
    <string name="new_address_entreCalle2">Entre calle 2</string>
    <string name="new_address_provincia">Provincia</string>
    <string name="new_address_partido">Partido</string>
    <string name="new_address_localidad">Localidad</string>
    <string name="new_address_policeStation">Comisaría</string>
    <string name="new_address_comentarios">Comentarios</string>

    <!-- CambiarPassActivity -->
    <string name="pass_anterior">Contraseña anterior</string>
    <string name="pass_nueva">Contraseña nueva</string>
    <string name="repetir_pass_nueva">Repetir contraseña</string>

    <!-- ConfirmarPassActivity -->
    <string name="btn_aceptar">Aceptar</string>
    <string name="txt_confirmar_pass">Para continuar, ingrese su contraseña</string>

    <!-- ConfirmarAnioActivity -->
    <string name="confirmar_anio">Año de Nacimiento</string>
    <string name="txt_confirmar_anio">Para enviar la denuncia, ingrese su año de nacimiento</string>
    
    <!-- DatePickerActivity -->
    <string name="date_day">Día</string>
    <string name="date_month">Mes</string>
    <string name="date_year">Año</string>
    <string name="txt_fecha_nacimiento">Ingrese su Fecha de Nacimiento</string>    

</resources>