<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000" >

    <ImageView
        android:id="@+id/login_logo_tea"
        android:contentDescription="@string/login_logo_tea"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/img_tea_logo" />

    <EditText 
        android:id="@+id/et_email"
        android:hint="@string/login_hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:layout_height="40dp"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/login_logo_tea"
        android:background="@drawable/background_textview_top_redondeado" />
    
    <EditText
        android:id="@+id/et_password"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"   
        android:layout_height="40dp"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_email"
        android:background="@drawable/background_textview_bot_redondeado" />

    <Button
        android:id="@+id/login_btn"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:onClick="loginApp"        
        android:text="@string/btn_login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_below="@+id/et_password"
        android:background="@drawable/background_button_redondeado" />

    <Button
        android:id="@+id/olvidarPass_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/background_button_redondeado"
        android:onClick="registrarse"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_olvidePass"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/registrar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/background_button_redondeado"
        android:onClick="registrarse"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_registrar"
        android:textColor="@android:color/white" />

</RelativeLayout>
