<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DatePickerActivity" >
    
    <TextView
        android:id="@+id/txt_fecha_nacimiento"
        android:text="@string/txt_fecha_nacimiento"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
	   	android:layout_width="match_parent"
	   	android:layout_height="wrap_content"
	   	android:orientation="horizontal"
	    android:layout_marginTop="10dp"
	   	tools:context=".NewAddressActivity" >
		        
		 <EditText 
		 	android:id="@+id/date_day"
		 	android:hint="@string/date_day"
			android:inputType="number"
			android:maxLength="2"
			android:textColor="@android:color/black"	 	
			android:textStyle="bold"
		 	android:layout_height="40dp"
		 	android:layout_width="0dp"
		 	android:layout_weight="0.2"
		 	android:paddingLeft="10dp"
		 	android:paddingRight="10dp"
		 	android:background="@drawable/background_edittext_left_redondeado"        
        	android:gravity="center" />
		 	
		<EditText 
		 	android:id="@+id/date_month"
		 	android:hint="@string/date_month"
		  	android:textColor="@android:color/black"
		  	android:inputType="textCapSentences"
			android:textStyle="bold"
		 	android:layout_height="40dp"
		 	android:layout_width="0dp"
		 	android:layout_weight="0.5"
		 	android:layout_marginLeft="2dp"
		 	android:paddingLeft="10dp"
		 	android:paddingRight="10dp"
		 	android:onClick="selectDate"
			android:clickable="true" 
	        android:cursorVisible="false" 
    	    android:focusable="false"
        	android:focusableInTouchMode="false"
		 	android:background="@drawable/background_edittext_cuadrado"        
     	    android:gravity="center" />
		 	
		 <EditText 
		 	android:id="@+id/date_year"
		 	android:hint="@string/date_year"
			android:textColor="@android:color/black"
		 	android:inputType="number"
		 	android:maxLength="4"
			android:textStyle="bold"
		 	android:layout_height="40dp"
		 	android:layout_width="0dp"
		 	android:layout_weight="0.3"
		 	android:layout_marginLeft="2dp"
		 	android:paddingLeft="10dp"
		 	android:paddingRight="10dp"
		 	android:background="@drawable/background_edittext_right_redondeado"        
     	    android:gravity="center" />

	</LinearLayout>
	
    <Button
	    android:id="@+id/aceptar_btn"
	    android:layout_width="fill_parent"
      	android:layout_height="40dp"
      	android:layout_marginTop="20dp"
	    android:background="@drawable/background_button_redondeado"
       	android:textStyle="bold"
	    android:onClick="aceptar"
     	android:text="@string/btn_aceptar"        
     	android:textColor="@android:color/white" />
		 
</LinearLayout>
