<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DatosPersonalesActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
	<LinearLayout    
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:orientation="vertical" >
    
    	<EditText 
        	android:id="@+id/et_email"
        	android:inputType="textEmailAddress"
        	android:layout_height="40dp"
        	android:layout_width="fill_parent"
        	android:paddingLeft="10dp"
        	android:paddingRight="10dp"
        	android:layout_marginTop="10dp"
        	android:clickable="false" 
        	android:cursorVisible="false" 
        	android:focusable="false" 
        	android:focusableInTouchMode="false"
        	android:background="@drawable/background_textview_top_redondeado" />
    
    	<EditText 
	        android:id="@+id/et_dni"
        	android:hint="@string/dp_dni"
        	android:inputType="number"
        	android:layout_height="40dp"
        	android:layout_width="fill_parent"
        	android:paddingLeft="10dp"
        	android:paddingRight="10dp"
        	android:layout_marginTop="10dp"
        	android:background="@drawable/background_textview_cuadrado" />
    
    	<EditText 
	        android:id="@+id/et_nombre"
        	android:hint="@string/dp_nombre"
        	android:inputType="textCapWords"
        	android:layout_height="40dp"
        	android:layout_width="fill_parent"
        	android:paddingLeft="10dp"
        	android:paddingRight="10dp"
        	android:layout_marginTop="10dp"
        	android:background="@drawable/background_textview_cuadrado" />
    
    	<EditText 
	        android:id="@+id/et_apellido"
        	android:hint="@string/dp_apellido"
        	android:inputType="textCapWords"
        	android:layout_height="40dp"
        	android:layout_width="fill_parent"
        	android:paddingLeft="10dp"
        	android:paddingRight="10dp"
        	android:layout_marginTop="10dp"
        	android:background="@drawable/background_textview_cuadrado" />
    
	    <EditText 
    	    android:id="@+id/et_telefono"
	        android:hint="@string/dp_telefono"
        	android:inputType="phone"
        	android:layout_height="40dp"
        	android:layout_width="fill_parent"
        	android:paddingLeft="10dp"
        	android:paddingRight="10dp"
        	android:layout_marginTop="10dp"
        	android:background="@drawable/background_textview_cuadrado" />
    
    	<LinearLayout
	    	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
        	android:layout_marginTop="10dp"
    		tools:context=".DatosPersonalesActivity" >
	    
    		<EditText 
	        	android:id="@+id/et_fecha_nacimiento"
        		android:hint="@string/dp_fecha_nacimiento"
        		android:layout_height="40dp"
        		android:layout_width="0dp"
	        	android:layout_weight="1"
        		android:ems="11"
        		android:paddingLeft="10dp"
        		android:paddingRight="10dp" 
        		android:layout_marginRight="4dp"
				android:clickable="false" 
	        	android:cursorVisible="false" 
    	    	android:focusable="false"
        		android:focusableInTouchMode="false"
        		android:background="@drawable/background_textview_bot_left_redondeado" />
	    	
    		<ImageButton
	    	    android:id="@+id/btn_select_date"
    	    	android:contentDescription="@string/dp_seleccionar_mes"
        		android:layout_height="wrap_content"
        		android:layout_width="wrap_content"
        		android:src="@drawable/ic_seleccionar_mes40"
        		android:onClick="selectDate"
        		android:background="@drawable/background_button_bot_right_redondeado" />
	    	
    		</LinearLayout>
	
	</LinearLayout>
	
</ScrollView>