<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ModificarPassActivity" >
    
    <EditText 
       	android:id="@+id/et_pass_anterior"
       	android:hint="@string/pass_anterior"
       	android:inputType="textPassword"
       	android:textColor="@android:color/black"
       	android:textStyle="bold"
       	android:layout_height="40dp"
       	android:layout_width="fill_parent"
       	android:paddingLeft="10dp"
       	android:paddingRight="10dp"
       	android:layout_marginTop="10dp"
       	android:background="@drawable/background_edittext_top_redondeado" />
   
   	<EditText 
        android:id="@+id/et_pass_nueva1"
       	android:hint="@string/pass_nueva"
       	android:inputType="textPassword"
       	android:textColor="@android:color/black"
       	android:textStyle="bold"
       	android:layout_height="40dp"
       	android:layout_width="fill_parent"
       	android:paddingLeft="10dp"
       	android:paddingRight="10dp"
       	android:layout_marginTop="10dp"
       	android:background="@drawable/background_edittext_cuadrado" />
   
   	<EditText 
        android:id="@+id/et_pass_nueva2"
       	android:hint="@string/repetir_pass_nueva"
       	android:inputType="textPassword"
       	android:textColor="@android:color/black"
       	android:textStyle="bold"
       	android:layout_height="40dp"
       	android:layout_width="fill_parent"
       	android:paddingLeft="10dp"
       	android:paddingRight="10dp"
       	android:layout_marginTop="10dp"
       	android:background="@drawable/background_edittext_bot_redondeado" />
   	
   	<Button
	    android:id="@+id/cambiarPass_btn"
	    android:layout_width="fill_parent"
      	android:layout_height="40dp"
      	android:layout_marginTop="20dp"
	    android:background="@drawable/background_button_redondeado"
       	android:textStyle="bold"
	    android:onClick="modificarPass"
     	android:text="@string/btn_modificar_pass"        
     	android:textColor="@android:color/white" />

</LinearLayout>
