<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ConfirmarPassActivity" >

    <TextView
        android:id="@+id/txt_confirmar_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_confirmar_pass"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText 
       	android:id="@+id/et_pass"
       	android:hint="@string/dp_password"
       	android:inputType="textPassword"
       	android:textColor="@android:color/black"
       	android:textStyle="bold"
       	android:layout_height="40dp"
       	android:layout_width="fill_parent"
       	android:paddingLeft="10dp"
       	android:paddingRight="10dp"
       	android:layout_marginTop="10dp"
       	android:background="@drawable/background_edittext_cuadrado" />
    
    <Button
	    android:id="@+id/aceptar_btn"
	    android:layout_width="fill_parent"
      	android:layout_height="40dp"
      	android:layout_marginTop="20dp"
	    android:background="@drawable/background_button_redondeado"
       	android:textStyle="bold"
	    android:onClick="aceptarPass"
     	android:text="@string/btn_aceptar"        
     	android:textColor="@android:color/white" />

</LinearLayout>
